--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -1,10 +1,12 @@
-// _variables.scss
+
 $bg-color: #ece4d9;
 $text-color: #333;
 $primary-color: #6366F1;
 $white: #ffffff;
+$color-footer-bg: #6366F1;
+$color-footer-texto: #ffffff;
 
-// Tamaños de fuente originales
+
 $font-size-logo: 40px;
 $font-size-titulo: 4rem;
 $font-size-subtitulo: 3rem;
